# rbkairos_project

./: .gitignore
people_tracking/: CMakeLists.txt  package.xml
people_tracking/scripts/: custom_class_and_function.py  custom_classes.py  mas_prruebas.py  person_pose_pub.py  pruebas.py  target_calculation.py
plannar_mover/: CMakeLists.txt  package.xml
plannar_mover/config/: plannar_mover_control.yaml
plannar_mover/launch/: kinetic_main.launch  kinetic_main_v2.launch  plannar_mover_control.launch  spawn_plannar_mover.launch  spawn_with_controlers_plannar_mover.launch
plannar_mover/models/gurdy/: model.config  model.sdf
plannar_mover/models/gurdy/meshes/: Gurdy_Base.STL  Gurdy_Base_peg.STL  Gurdy_Base_with_pegs.STL  Gurdy_Head.STL  Gurdy_Lower_leg.STL  Gurdy_Upper_leg.STL  gurdy_base.dae  gurdy_base_peg.dae  gurdy_base_v2.dae  gurdy_base_with_pegs.dae  gurdy_base_with_pegs_v2.dae  gurdy_head.dae  gurdy_higherleg.dae  gurdy_lowerleg.dae
plannar_mover/pose_files/: custom_ground_plane_box1594304360.2.yaml  person_standing1594305354.7.yaml
plannar_mover/scripts/: plannar_mover_demo.py  publish_gazebo_pose.py  store_model_poses.py
plannar_mover/urdf/: plannar_mover.urdf
plannar_mover/worlds/: nave_v1_box.world  nave_v1_box_person.world  nave_v1_person.world  plannar_mover.world  plannar_mover_empty.world  plannar_mover_walking_person.world
plots/: CMakeLists.txt  package.xml
plots/data/: covariance_4_mas_angulos.csv  covariance_4_mas_angulos.xlsx  covariance_data1.csv  covariance_data1.xlsx  (+22 more)
robot_bringup/: CMakeLists.txt  package.xml
(+75 files in other folders)
